[package]
name = "differential_privacy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_distr = "0.4"
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.5" # For parallel processing